Reset environment variables in .env.example
Cleared example environment variables for security.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PROJECT=gcp-cert-bot
-DATASET=cert_kb
-TABLE=cert_docs
-REGION=us-central1
-GOOGLE_API_KEY=AIzaSyBzT82VANgxrV3TGjamsu8RxA0y79pBC_Y
+PROJECT=
+DATASET=
+TABLE=
+REGION=
+GOOGLE_API_KEY=
